--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "@tanstack/react-query": "^5.90.21",
-    "@tanstack/react-virtual": "^3.13.18"
+    "@tanstack/react-virtual": "^3.13.18",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.21"
   }
 }
